Refactoring for services and Product